--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ resolver = "2"
 
 [workspace.dependencies]
 thiserror = "1.0.32"
-starknet_api = "=0.12.0-dev.1"
+starknet_api = "0.10.0"
 blockifier = { git = "https://github.com/Moonsong-Labs/blockifier", branch = "msl/derive-clone", features = ["testing"] }
 tracing = "0.1"
